<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Main2Activity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_teks_laporan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/teks_laporan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/lokasi"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_teks_laporan" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/lokasi"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:entries="@array/lokasi_array"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_teks_laporan" />

        <TextView
            android:id="@+id/tv_perusahaan_observasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/perusahaan_yang_di_observasi"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lokasi" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/perusahaan_observasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:entries="@array/perusahaan_array"
            android:spinnerMode="dropdown"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_perusahaan_observasi" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_kegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/perusahaan_observasi">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contoh_kegiatan"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_detail_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_kegiatan">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_detail_lokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_lokasi"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_kronologi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_detail_lokasi">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_kronologi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kronologi_temuan"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_kategori_resiko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/kategori_resiko"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_kronologi" />

        <RadioGroup
            android:id="@+id/radio_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kategori_resiko">
            <RadioButton android:id="@+id/radio_AA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AA"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_akar_masalah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_kategori">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_akar_masalah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/akar_masalah"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/back_to_page1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/back_button"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_akar_masalah"
            />

        <Button
            android:id="@+id/next_to_page3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/next_button"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_akar_masalah"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>